# Baremetal-IDE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  riscv-gcc.cmake  riscv-llvm.cmake
.github/workflows/: make-examplechip.yaml  make-examplechip.yml  make-examples.yaml
app/inc/: main.h  syscalls.h
app/include/: main.h  test_conv.h  test_dma.h
app/src/: main.c  test_conv.c  test_dma.c
bsp/arty/: Makefile  arty.cfg  arty.h  arty.ld  arty.svd
bsp/bearlyml/: Makefile  bearlyml.cfg  bearlyml.h  bearlyml.svd
bsp/bearlyml23/: Makefile  bearlyml23.c  bearlyml23.h
bsp/eaglex/: eaglex.h  eaglex.ld  eaglex_prci.h
bsp/examplechip/: Makefile  examplechip.c  examplechip.cfg  examplechip.h  examplechip.ld  examplechip.svd
bsp/fe310/: Makefile  fe310.c  fe310.cfg  fe310.h  fe310.ld  fe310.svd
bsp/maveric/: Makefile  maveric.c  maveric.cfg  maveric.h  maveric.json  maveric.ld  maveric_all.cfg
bsp/qemuvirt/: Makefile  qemuvirt.c  qemuvirt.h  qemuvirt.ld
bsp/robo23/: Makefile  robo23.c  robo23.h  robo23.ld
bsp/scripts/: create_project.py  xmlandjson.py
bsp/spike/: Makefile  spike.c  spike.h  spike.ld
convaccel/: DMA_utils.h  capture_image.c  conv_main  conv_main.c  input.pgm  main  main.c  main_schmoo.c  output.pgm  output_007.pgm  output_008.pgm  output_face.pgm  output_small.pgm
convaccel/canny/: 007.pgm  008.pgm  Makefile  andrew.pgm  canny  canny.c  canny.h  canny_edge_detector  canny_opt.c  main.c  main_for_tushar.c  main_for_tushar_0.c  main_for_tushar_2.c  output.pgm
core/inc/: accelerator_funcs.h  hal.h  kalman.h  main.h  mte.h  mte_add.h  mte_addti.h  mte_basic_load_store.h  mte_csrs.h  mte_dbg.h  mte_irt.h  rocc.h
core/src/: hal.c  main.c  syscalls.c
debug/: bearlyml.cfg  examplechip.cfg
docs/: Code-Style.md  File-Structure.md  README.md  SUMMARY.md  clock_tree.html  index.html  vscode-dark.css
docs/baremetal-ide/: adding-support-for-new-socs.md  pinmaps.md  risc-v-programming.md
driver/: CMakeLists.txt
driver/common/: CMakeLists.txt  hal.h
driver/htif/: CMakeLists.txt  Makefile  atomic.h  fesvr.h  htif.c  htif.h  spinlock.h  write.c
driver/intel/pll/: CMakeLists.txt  pll.c  pll.h
driver/mada/timer/: CMakeLists.txt  mada_timer.c  mada_timer.h
driver/metal/: CMakeLists.txt  metal.h
driver/national-semiconductor/: Makefile
driver/national-semiconductor/ns16550a/: CMakeLists.txt  ns16550a.S  uart.c  uart.h  uart_const.h
driver/rocket-chip/: Makefile
driver/rocket-chip-blocks/: Makefile
driver/rocket-chip-blocks/gpio/: CMakeLists.txt  gpio.c  gpio.h  hal_gpio.c  hal_gpio.h
driver/rocket-chip-blocks/i2c/: CMakeLists.txt  i2c.c  i2c.h
driver/rocket-chip-blocks/pwm/: CMakeLists.txt  pwm.c  pwm.h
driver/rocket-chip-blocks/spi/: CMakeLists.txt  spi.c  spi.h
driver/rocket-chip-blocks/uart/: CMakeLists.txt  hal_uart.c  hal_uart.h  uart.c  uart.h
driver/rocket-chip/clint/: CMakeLists.txt  clint.c  clint.h  hal_clint.c  hal_clint.h
driver/rocket-chip/l_trace_encoder/: CMakeLists.txt  l_trace_encoder.c  l_trace_encoder.h
driver/rocket-chip/plic/: CMakeLists.txt  hal_plic.c  hal_plic.h  plic.c  plic.h
driver/rocket-chip/rocketcore/: CMakeLists.txt  pmu.h  riscv.h  riscv_encoding.h  rocketcore.c  rocketcore.h
driver/rv/: Makefile  core.h  hal_core.c  hal_core.h  rv.h  rv_arch.h  rv_common.h  rv_encoding.h  trap.c
driver/rv/boot/: asm.h  startup.S
driver/rv/rv/: arch.h  encoding.h  interrupt.h
driver/syscon/: Makefile
driver/syscon/poweroff/: CMakeLists.txt  poweroff.c  poweroff.h
drivers/: CMakeLists.txt
drivers/rocket-chip-blocks/: CMakeLists.txt
drivers/rocket-chip-blocks/gpio/: gpio.h  hal_gpio.c  hal_gpio.h  ll_gpio.h
drivers/rocket-chip-blocks/i2c/: hal_i2c.c  hal_i2c.h  i2c.h  ll_i2c.h
drivers/rocket-chip-blocks/pwm/: hal_pwm.h  ll_pwm.h
drivers/rocket-chip-blocks/spi/: hal_spi.c  hal_spi.h  ll_spi.h  spi.h
drivers/rocket-chip-blocks/uart/: hal_uart.h  ll_uart.h  uart.h
encoders/: CMakeLists.txt
encoders1/: CMakeLists.txt
encoders1/src/: main.c
examples/: CMakeLists.txt  fpga_uart_interrupt.c  htif_interrupt.c
examples/embench/: CMakeLists.txt
examples/embench/common/inc/: support.h  trigger.h
examples/embench/common/src/: beebsc.c  main.c
examples/embench/dummy/: libdummy.c
examples/embench/huffbench/: libhuffbench.c
examples/embench/wikisort/: CMakeLists.txt  Makefile
examples/embench/wikisort/inc/: beebsc.h  libwikisort.h
examples/embench/wikisort/src/: main.c
examples/freertos/: CMakeLists.txt
examples/freertos/include/: FreeRTOSConfig.h  riscv-reg.h
examples/freertos/src/: main.c  main_blinky.c  riscv-virt.c
examples/pmu-tests/: CMakeLists.txt
examples/pmu-tests/src/: foc-driver.c  lbr-test.c  ltrace-dma-test.c  ltrace-hpm-test.c  pmu-test-inhibit.c  pmu-test-load.c  pmu-test-store.c  sort.c  speedscope-test.c  trace-hello.c  trig-sin.c  vpp-test.c
glossy/: CMakeLists.txt  glossy.ld  glossy.specs
glossy/include/: riscv.h
glossy/src/startup/: crt0.S  init.S  secondary.c
glossy/src/sys/: close.c  exit.c  isatty.c  kill.c  lseek.c  open.c  sbrk.c  time.c  time.h  write.c
glossy/src/trap/: trap.S  trap.c
gui/: README.md  index.html
lab/: CMakeLists.txt
lib/: CMakeLists.txt  baremetal-nn.mk  libgloss-htif.mk
lib/htif/: CMakeLists.txt
lib/htif/inc/: compiler.h  htif.h  spinlock.h  syscall.h
lib/htif/src/: chdir.c  chmod.c  faccessat.c  fstat.c  fstatat.c  getcwd.c  gettimeofday.c  htif.c  kill.c  link.c  lstat.c  open.c  printf.c  puts.c  read.c  snprintf.c  sprintf.c  stat.c  sysconf.c  times.c  unlink.c  wait.c  write.c
platform/bearly24/: CMakeLists.txt  bearly24.cfg  bearly24.ld  chip_config.h
platform/bearly24/inc/: hal_dma.h  hal_qt.h  ll_dma.h  ll_pll.h
platform/bearly24/src/: hal_dma.c  hal_mmio.c
platform/bearlyml/: CMakeLists.txt  bearlyml.cfg  bearlyml.cmake  bearlyml.ld  chip_config.h
platform/bearlyml/inc/: ll_rcc.h
platform/default/: CMakeLists.txt  chip_config.h  default.cmake
platform/labchip/: CMakeLists.txt  chip_config.h  labchip.cfg  labchip.ld
workspace/: Makefile
(+347 files in other folders)
