
add_subdirectory(metal)

add_subdirectory(htif)

add_subdirectory(intel/pll)

add_subdirectory(national-semiconductor/ns16550a)

add_subdirectory(rocket-chip/clint)
add_subdirectory(rocket-chip/plic)
add_subdirectory(rocket-chip/rocketcore)
add_subdirectory(rocket-chip/l_trace_encoder)

add_subdirectory(rocket-chip-blocks/gpio)
add_subdirectory(rocket-chip-blocks/i2c)
add_subdirectory(rocket-chip-blocks/pwm)
add_subdirectory(rocket-chip-blocks/spi)
add_subdirectory(rocket-chip-blocks/uart)

add_subdirectory(syscon/poweroff)
